# Nodes

./: CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  CentralWidgetView.cpp  CentralWidgetView.h  CollisionHanlder.cpp  CollisionHanlder.h  ConnectionHandler.h  GraphicsConnection.cpp  GraphicsConnection.h  GraphicsItem.cpp  GraphicsNode.cpp  GraphicsNode.h  InteractionHandler.cpp  InteractionHandler.h  InteractionModule.cpp  InteractionModule.h  Node.cpp  Node.h  NodeCollection.cpp  NodeCollection.h  NodeGroup.cpp  NodeGroup.h  NodeManager.cpp  NodeManager.h  NodeStore.cpp  NodeStore.h  README.md  Scene.h  StaticTypedefs.h  main.cpp
Core/: CMakeLists.txt
Core/InteractionModule/: CMakeLists.txt
Core/NodeStore/: CMakeLists.txt  NodeManager.h  NodeStore.cpp
Shared/: CMakeLists.txt
Shared/EventSystem/: CMakeLists.txt  Communicator.cpp
Shared/EventSystem/Events/: CMakeLists.txt  EvInteraction.h  EvNode.h
Shared/Node/: CMakeLists.txt  Node.h
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Core/NodeManager/: CMakeLists.txt  ConnectionHandler.cpp  InteractionHandler.h  Interactions.h  NodeHandler.cpp  NodeHandler.h  NodeManager.cpp  NodeManager.h
Source/Shared/: CMakeLists.txt  StaticTypedefs.h
Source/Shared/EventSystem/: Communicator.h
Source/Shared/EventSystem/Events/: AbstractEvent.cpp  AbstractEvent.h  CMakeLists.txt  EvConnection.h  EvInteraction.h  EvNode.h
Source/Shared/Node/: CMakeLists.txt  Node.h
Source/UI/: CMakeLists.txt  NodeArea.cpp  NodeArea.h  NodeAreaView.cpp  NodeAreaView.h  mainwindow.h
UI/: CMakeLists.txt  CentralWidget.cpp  CentralWidgetView.h  GraphicsItem.h  Scene.cpp  Scene.h  mainwindow.cpp
